# AndFixDemo

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/dexfileformat/dexfileformat/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: refile.dex
app/src/main/cpp/: CMakeLists.txt  andfix.cpp
app/src/main/cpp/art/: art_method_replace_4_4.cpp  art_method_replace_5_0.cpp  art_method_replace_5_1.cpp  art_method_replace_6_0.cpp  art_method_replace_7_0.cpp
app/src/main/cpp/dalvik/: dalvik_method_replace.cpp
app/src/main/java/com/alipay/euler/andfix/: AndFixManager.java
app/src/main/java/com/dexfileformat/dexfileformat/: AssetFileManager.java  DexFileFormat.java  MainActivity.java  ReplaceFile.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dexfileformat/dexfileformat/: ExampleUnitTest.java
